--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -214,10 +214,28 @@
     display: none !important;
   }
   .teamHeading > h1 {
-    padding-left: 0.5rem;
     text-align: center;
+    font-size: 1.5rem;
   }
   .teamHeading > h1::after {
     display: none !important;
+  }
+
+  .team_executives {
+    margin: 1rem 0;
+    min-width: 100vw;
+  }
+  .container {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+
+@media screen and (max-width : 320px) {
+  .container .card {
+    width: 240px;
   }
 }
