--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   color: white;
-  background-color: rgba(98, 74, 156, 0.485);
+  background-color: #18253f5c;
   opacity: 50;
   backdrop-filter: blur(10px);
   margin-top: 5rem;
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: poppins,'sans-serif';
+  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
 .footer > .upper-section {
@@ -17,7 +18,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: start;
-  row-gap: 5rem;
+  row-gap: 1rem;
   column-gap: 4rem;
   width: 100%;
 }
@@ -30,57 +31,63 @@
 
 .footer .upper-section h1::after {
   content: "";
-  background-color: rgb(228, 78, 255);
+  background-color: #00bfff;
   position: absolute;
-  width: 100%;
-  height: 5px;
-  bottom: -15%;
+  width: 50%;
+  height: 4px;
+  bottom: 0;
   left: 0;
   border-radius: 20px;
 }
 
-.footer-a {
+/* .footer-a {
   transition: 0.5s all ease-out;
-}
-
-.footer-a:hover {
-  scale: 1.2;
-  transform-origin: center;
-}
+} */
 
 .container {
   display: flex;
   flex-direction: column;
-  gap: 2.25rem;
+  gap: 2rem;
 }
 
 /* logo */
-
 .footer-logo {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.footer-logo > h2 {
-  text-decoration: underline;
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-decoration-color: rgb(228, 78, 255);
-  text-decoration-thickness: 5px;
+  justify-self: center;
 }
 
 .footer-logo > img {
   height: 100px;
+  margin-bottom: 6px;
+}
+
+.footer-logo > h2 {
+  font-family: frozen;
+  font-size: 2rem;
+  position: relative;
+}
+
+.footer-logo > h2::after {
+  content: "";
+  background-color: #00bfff;
+  position: absolute;
+  width: 50%;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  border-radius: 20px;
 }
 
 /* about */
-
 .about {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.3rem;
+  transform: translateY(-6px);
 }
 
 .about > a {
@@ -90,8 +97,10 @@
 /* contacts */
 
 .contacts {
+  font-size: 0.8rem;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 0.4rem;
   scale: 1.2;
 }
@@ -101,11 +110,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  transition: all 0.2s ease-in-out;
 }
 
 .contacts > a:hover {
-  scale: 1.1;
+  /* scale: 1.1; */
 }
 
 .contacts > a > span {
@@ -114,7 +122,6 @@
 }
 
 /* social accounts */
-
 .social-container {
   display: flex;
   flex-direction: column;
@@ -124,22 +131,23 @@
 .socials {
   display: flex;
   gap: 2.3rem;
+  margin-left: 8px;
 }
 
 .socials > a {
-  scale: 1.5;
-  transition: all 0.5s ease-in-out;
+  scale: 2.2;
+  transition: all 100ms ease-in-out;
 }
 
 .socials > a:hover {
-  scale: 1.7;
+  scale: 2.4;
 }
 
 /* LOWER SECTION */
 
 .footer > .lower-section > h1 {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .footer > .lower-section > h1 > span {
@@ -161,17 +169,6 @@
     text-align: center;
     font-size: 1.7rem;
     margin: 0 auto;
-  }
-
-  .footer .upper-section h1::after {
-    content: "";
-    background-color: rgb(228, 78, 255);
-    position: absolute;
-    width: 100%;
-    height: 5px;
-    bottom: -15%;
-    left: 0;
-    border-radius: 20px;
   }
 
   .footer-logo > img {
