--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -216,8 +216,12 @@
   .teamHeading > h1 {
     padding-left: 0.5rem;
     text-align: center;
+    font-size: 26px;
   }
   .teamHeading > h1::after {
     display: none !important;
+  }
+  .team_executives {
+    margin: 1rem;
   }
 }
