--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  font-family: poppins,'sans-serif';
+  font-family: poppins, "sans-serif";
   /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
@@ -147,7 +147,7 @@
 
 .footer > .lower-section > h1 {
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .footer > .lower-section > h1 > span {
@@ -179,7 +179,7 @@
   }
 
   .footer > .lower-section > h1 {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
