--- a/client/src/Components/MakerSpace/Makerspace.css
+++ b/client/src/Components/MakerSpace/Makerspace.css
@@ -113,4 +113,23 @@
        gap: 2rem;
    }
   }
+
+  .dark-overlay {
+    /* position: absolute; */
+    /* top: 0;
+      left: 0; */
+    /* width: 100%;
+      height: 100%; */
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: background-color 0.5s ease;
+    z-index: -5;
+    /* backdrop-filter: blur(1px); */
+  }
+  
+  .dark-overlay.active {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
   
