--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  font-family: poppins, "sans-serif";
+  /* font-family: poppins, "sans-serif"; */
+  font-family: frozen;
   /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
