images converted to webp card-alignment fixed

--- a/client/src/Components/MakerSpace/Project.css
+++ b/client/src/Components/MakerSpace/Project.css
@@ -1,7 +1,7 @@
 .Projects__card{
   /* min-height: 70vh; */
   max-width: 25vw;
-  height: fit-content;
+  /* height: fit-content; */
   background: rgba(255, 255, 255, 0.15);
   border-radius: 10px;
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
