bg-changed, color-update, font-updated

--- a/client/src/Components/Faq/Accordian.css
+++ b/client/src/Components/Faq/Accordian.css
@@ -85,8 +85,8 @@
     }
     .wrapper .answer-content{
       padding: 1rem 0;
-      font-size: 17px;
-      font-style: italic;
+      font-size: 21px;
+      font-family: MagicI;
     }
     
     @media screen and (max-width: 1024px) {
