--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
+  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -10,7 +10,7 @@
   z-index: 999;
   background: rgba(255, 255, 255, 0.109);
   backdrop-filter: blur(90px);
-  padding: 20px;
+  padding: 15px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(255, 255, 255, 0.3) 0px 8px 16px -8px;
 }
@@ -34,10 +34,12 @@
 .nav-btn {
   padding: 4px;
   margin: 0.2rem 0;
-  font-size: 20px;
+  font-size: 36px;
+  letter-spacing: 1.1px;
   border-radius: 10px;
-  font-weight: 600;
-  font-family: frozen, serif;
+  font-weight: 500;
+  /* font-family: frozen, serif; */
+  font-family: Harry;
 }
 .nav-btn div {
   /* color: transparent;
@@ -58,7 +60,7 @@ a {
 }
 
 a:hover {
-  color: #00bfff;
+  color: #d19f3d;
 }
 
 .nav-opt {
@@ -168,6 +170,11 @@ a:hover {
     display: block;
     cursor: pointer;
     height: fit-content;
+    align-self: flex-start;
+  }
+
+  .logo {
+    align-self: flex-start;
   }
 
   .bar {
