--- a/client/src/Components/LandingPage/Landing.css
+++ b/client/src/Components/LandingPage/Landing.css
@@ -12,7 +12,8 @@
 .welcome {
   font-size: 40px;
   font-weight: 700;
-  color: var(--green);
+  /* color: var(--green); */
+  color: #d19f3d;
   align-items: flex-start;
   margin-left: 80px;
   font-family: var(--font-poppins);
@@ -23,7 +24,7 @@
   height: 50rem;
   top: -2rem;
   left: 50%;
-  opacity: 0.8;
+  opacity: 0;
   z-index: -10;
 }
 
