--- a/client/src/Components/ContactUs/Contact.css
+++ b/client/src/Components/ContactUs/Contact.css
@@ -18,19 +18,19 @@
   position: relative;
   z-index: 2;
   margin-top: 0rem;
-  color: var(--green);
+  color: var(--harry);
   display: flex;
   align-items: center;
-  font-family: var(--font-heading);
+  font-family: magic_italic;
   justify-content: center;
   text-align: center;
-  font-size: 42px;
+  font-size: 4rem;
   margin-top: 0rem;
 }
 .contactHeading > h1::after {
   content: "";
   display: block;
-  background-color: var(--green);
+  background-color: var(--harry);
   width: 10rem;
   height: 3px;
   border-radius: 1rem;
@@ -40,7 +40,7 @@
 .contactHeading > h1::before {
   content: "";
   display: block;
-  background-color: var(--green);
+  background-color: var(--harry);
   width: 10rem;
   height: 3px;
   border-radius: 1rem;
