--- a/client/src/Components/AboutUs/AboutUs.css
+++ b/client/src/Components/AboutUs/AboutUs.css
@@ -23,6 +23,7 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
+  font-family: frozen;
 }
 
 .About-item-heading {
@@ -36,6 +37,7 @@
 .About-item {
   /* margin-bottom: 1.2rem; */
   font-size: medium;
+  /* font-family: "Rubik", sans-serif; */
   font-family: "Rubik", sans-serif;
 }
 
@@ -123,12 +125,11 @@
   }
 }
 
-@media(max-width:859px) {
+@media (max-width: 859px) {
   .About-item-main {
     text-align: center;
   }
 }
 
-@media(max-width:380){
-
+@media (max-width: 380) {
 }
