--- a/client/src/Components/ContactUs/Contact.css
+++ b/client/src/Components/ContactUs/Contact.css
@@ -63,6 +63,7 @@
   margin-left: 1rem;
   text-align: center;
   max-width: 300px;
+  height: 100%;
 
   min-width: 250px;
   backdrop-filter: blur(10px); /* Apply a blur effect */
@@ -77,6 +78,7 @@
 }
 .contact_content_texts_heading {
   margin-bottom: 1rem;
+  font-family: frozen;
 }
 
 .contact_content_forms {
