--- a/client/src/Components/MakerSpace/Memories.css
+++ b/client/src/Components/MakerSpace/Memories.css
@@ -3,7 +3,15 @@
    justify-content: center;
    align-items: center;
    position: relative;
- }
+}
+
+.memories__container img{
+   transition: opacity 0.5s ease-in-out;
+}
+
+.memories__container.transition img{
+   opacity: 1;
+}
  .btn{
    padding: 0.25rem;
    background: white;
@@ -52,7 +60,7 @@
     border: none;
     box-shadow: 0px 2px 5px #666;
     cursor: pointer;
-    background-color: rgb(97, 186, 97);
+    background-color: #00bfff;
  }
  .indicator-inactive{
     background-color: #ffff;
@@ -72,15 +80,19 @@
  }
  
  @media screen and (max-width: 568px) {
+   .memories__container{
+      margin-left: 1rem;
+   }
    .slide{
          width: 100vw;
-         height: 90vh;
+         height: 100%;
          object-fit: contain;
-         padding-left: 1rem;
-         padding-right: 1rem;
+         /* padding-left: 1rem;
+         padding-right: 1rem; */
+         box-shadow: none;
    }
     .btn-left{
-       left: -15px;
+       left: -30px;
     }
     .btn-right{
       right: -15px;
