--- a/client/src/Components/cursor/Cursor.css
+++ b/client/src/Components/cursor/Cursor.css
@@ -1,18 +1,23 @@
+/* CustomCursor.css */
+
 .custom-cursor {
   position: fixed;
-  pointer-events: none; /* Make sure the custom cursor doesn't interfere with other elements */
-  z-index: 9999; /* Set a high z-index to ensure it appears above other elements */
-}
-
-.custom-cursor img {
-  height: 80px; /* Adjust the height of your custom cursor */
-  transform: translate(-50%, -50%);
-  user-drag: none;
-  user-select: none;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 50%;
   pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: transform 0.2s ease, background-color 0.2s ease;
+  border: 5px solid var(--harry);
+  z-index: 9999;
 }
 
-/* Hide the actual cursor */
-body {
-  cursor: none;
+.custom-cursor.clicked {
+  background-color: #ff0000; /* Change the background color on click */
+  transition: background-color 0.2s ease;
+}
+
+.custom-cursor.hovered {
+  /* Add any additional styles for the hovered state */
 }
