--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -48,6 +48,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text; */
+  font-family: Harry;
 }
 
 .nav-btn:hover {
