update font style and font color change

--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -116,7 +116,8 @@
 
 .container .card .content p {
   font-size: 1rem;
-  color: white;
+  /*color: white;*/
+  color:rgb(165, 226, 237);
   font-weight: 1000;
   margin-bottom: 1rem;
 }
@@ -177,6 +178,9 @@
 }
 .nameCard p {
   transition: all 0.5s;
+   /*change color and style*/
+  color:rgb(165, 226, 237);
+  font-style: bold;
 }
 
 .nameCard:hover p {
