--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -79,12 +79,11 @@
 
 .footer-logo > h2::after {
   content: "";
-  background-color: #ffffff;
-  /* background-color: #ffd8b4; */
+  background-color: #ffd8b4;
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: 0;
+  bottom: 3px;
   left: 0;
   border-radius: 20px;
 }
