--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -7,7 +7,10 @@
   scroll-behavior: smooth;
   transition: scroll-behavior 10s ease-in-out;
   letter-spacing: 0.8px;
-  cursor: none;
+}
+
+a:hover {
+  cursor: url("./Components/cursor/pointer-yellow.png"), auto;
 }
 
 @font-face {
@@ -89,6 +92,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  cursor: url("./Components/cursor/cursor-yellow.png"), auto;
 }
 
 ::-webkit-scrollbar {
