cursor animation added

--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -8,9 +8,12 @@
   transition: scroll-behavior 10s ease-in-out;
   letter-spacing: 0.8px;
 }
-
 a:hover {
   cursor: url("./Components/cursor/pointer-yellow.png"), auto;
+}
+
+body {
+  cursor: url("./Components/cursor/cursor-yellow.png"), auto;
 }
 
 @font-face {
