--- a/client/src/Components/ContactUs/Contact.css
+++ b/client/src/Components/ContactUs/Contact.css
@@ -21,7 +21,7 @@
   color: var(--harry);
   display: flex;
   align-items: center;
-  font-family: MagicI;
+  font-family: magic-italic;
   justify-content: center;
   text-align: center;
   font-size: 4rem;
