--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -75,6 +75,8 @@ body {
   --fz-md: 14px;
   --fz-xl: 20px;
   --fz-l: 16px;
+  --faq-q: #e3c58a;
+  --faq-a: #e8cf9e;
 
   /* font family  */
   --font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
@@ -107,12 +109,12 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #08ffc58e;
+  background: var(--harry);
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #00ffc3;
+  background: var(--harry);
 }
 
 ::-webkit-scrollbar-track {
