--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -10,7 +10,7 @@
   z-index: 999;
   background: rgba(255, 255, 255, 0.109);
   backdrop-filter: blur(90px);
-  padding: 15px;
+  padding: 15px 40px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(255, 255, 255, 0.3) 0px 8px 16px -8px;
 }
@@ -26,7 +26,7 @@
   z-index: 999;
   background: rgba(255, 255, 255, 0.109);
   backdrop-filter: blur(90px);
-  padding: 20px;
+  padding: 15px 40px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(255, 255, 255, 0.3) 0px 8px 16px -8px;
 }
