--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -17,7 +17,7 @@
 .nav2 {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
+  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -77,13 +77,6 @@ a:hover {
   width: 45%;
 }
 
-.nav-opt:hover {
-  cursor: pointer;
-}
-.nav-opt2:hover {
-  cursor: none;
-}
-
 .logo {
   color: white;
   font-size: 30px;
@@ -93,6 +86,9 @@ a:hover {
   color: white;
   font-size: 30px;
   width: 55%;
+}
+* {
+  /* dsfdafdf */
 }
 
 .logo img {
@@ -112,7 +108,6 @@ a:hover {
 
 .menu-icon {
   display: block;
-  cursor: pointer;
 }
 
 @media (max-width: 923px) {
@@ -169,7 +164,7 @@ a:hover {
 
   .menu-icon {
     display: block;
-    cursor: pointer;
+
     height: fit-content;
     align-self: flex-start;
   }
