navbar cursor property changed, alignment updaed, side scroll bar updated, audio play pause fixed, cursor property in footer fixed

--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -109,12 +109,12 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #08ffc58e;
+  background: var(--harry);
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #00ffc3;
+  background: var(--harry);
 }
 
 ::-webkit-scrollbar-track {
