--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -17,7 +17,7 @@
 .nav2 {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
+  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -26,7 +26,7 @@
   z-index: 999;
   background: rgba(255, 255, 255, 0.109);
   backdrop-filter: blur(90px);
-  padding: 20px;
+  padding: 15px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(255, 255, 255, 0.3) 0px 8px 16px -8px;
 }
