--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -14,6 +14,13 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(255, 255, 255, 0.3) 0px 8px 16px -8px;
 }
+
+.logo {
+  transform: translateX(-15px);
+}
+.logo2 {
+  transform: translateX(-15px);
+}
 .nav2 {
   display: flex;
   justify-content: space-between;
